--- a/developer-model-service/catalog-info.yaml
+++ b/developer-model-service/catalog-info.yaml
@@ -29,7 +29,8 @@ metadata:
     - gateway
 spec:
   type: model-server
-  owner: user:exampleuser
+  owner: group:ml-eng
+  system: ai-models 
   lifecycle: production
   providesApis:
     - model-service-api
